# Turn

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Turn based battle system  Turn.sln  astyle_format.sh  configure.sh  data.txt  pre-commit  scanfwithspace  snake game
.github/workflows/: cmake.yml
Turn/: .cproject  .project  CMakeLists.txt  Turn.vcxproj  Turn.vcxproj.filters  data.txt
Turn/include/: Common.h  Console.h  Enemy.h  Entity.h  Gambling.h  Game.h  Player.h  Sound.h  Store.h  StoreGreetings.h
Turn/include/EnemyTypes/: Bat.h  Cerberus.h  Crab.h  EnemyTypes.h  Gargoyle.h  GiantBat.h  GiantCrab.h  GiantSpider.h  GiantSquid.h  Goblin.h  Gremlin.h  Lich.h  Murloc.h  Putnafer.h  Rat.h  RatKing.h  Skeleton.h  Slimeball.h  SmallDragon.h  SmallRat.h  Squid.h  Vampire.h  Werewolf.h  Zabra.h  Zombie.h
Turn/include/PlayerTypes/: Debugger.h  Healer.h  Rogue.h  Saitama.h  Warrior.h
Turn/include/Turn/: Common.h  Game.h
Turn/include/Turn/EnemyTypes/: EnemyTypes.h  GiantCrab.h
Turn/include/Turn/PlayerTypes/: PlayerTypes.h
Turn/src/: Common.cpp  Console.cpp  Enemy.cpp  Entity.cpp  Gambling.cpp  Game.cpp  Player.cpp  Sound.cpp  Store.cpp  StoreGreetings.cpp  Turn.cpp  asdf.cpp  sourcelist.cmake
Turn/src/EnemyTypes/: Bat.cpp  Cerberus.cpp  Crab.cpp  Demon.cpp  Gargoyle.cpp  GiantBat.cpp  GiantCrab.cpp  GiantSpider.cpp  GiantSquid.cpp  Goblin.cpp  Gremlin.cpp  Lich.cpp  Mimic.cpp  Murloc.cpp  Putnafer.cpp  Rat.cpp  Skeleton.cpp  Slimeball.cpp  SmallRat.cpp  Squid.cpp  TimidGhost.cpp  Vampire.cpp  Werewolf.cpp  Zabra.cpp  Zombie.cpp
Turn/src/PlayerTypes/: Debugger.cpp  Healer.cpp  Rogue.cpp  Saitama.cpp  Warrior.cpp
include/: Common.h  Console.h  Enemy.h  Entity.h  Gambling.h  Game.h  ItemTypes.h  Player.h  Sound.h  Store.h
include/EnemyTypes/: Cerberus.h  Cockatrice.h  Crab.h  Demon.h  Dragon.h  Goblin.h  (+21 more)
src/: Common.cpp  Console.cpp  Enemy.cpp  Entity.cpp  Gambling.cpp  Game.cpp  Player.cpp  Sound.cpp  Store.cpp  StoreGreetings.cpp  Turn.cpp  sourcelist.cmake
(+36 files in other folders)
